--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,28 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "selene/cms-bundle": "dev-main",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
         "symfony/runtime": "6.2.*",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.48",
+        "symfony/stopwatch": "6.2.*",
+        "symfony/web-profiler-bundle": "6.2.*"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:SeleneSoftware/seleneCMSBundle.git"
+
+        }
+
+    ],
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
