--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "apexcharts": "^3.35.3",
+        "breakpoints-js": "^1.0.6",
         "file-loader": "^6.2.0",
         "jquery": "^3.6.1",
         "node-sass": "^8.0.0",
