--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "selenesoftware/cms-bundle": "dev-forgot-password",
-        "sensio/framework-extra-bundle": "^6.2",
+        "selenesoftware/cms-bundle": "dev-recent-posts",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
