--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "selenesoftware/cms-bundle": "dev-image-file",
+        "selenesoftware/cms-bundle": "dev-main",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
@@ -22,14 +22,6 @@
         "symfony/stopwatch": "6.2.*",
         "symfony/web-profiler-bundle": "6.2.*"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:SeleneSoftware/seleneCMSBundle.git"
-
-        }
-
-    ],
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
