--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/mailer": "6.2.*",
         "symfony/runtime": "6.2.*",
         "symfony/webpack-encore-bundle": "^1.16",
-        "symfony/yaml": "6.2.*"
+        "symfony/yaml": "6.2.*",
+        "symfony/ux-twig-component": "^2.7"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.48",
