--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,21 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "6.2.*",
-        "symfony/dotenv": "6.2.*",
+        "symfony/console": "7.0.*",
+        "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "6.2.*",
-        "symfony/mailer": "6.2.*",
-        "symfony/runtime": "6.2.*",
-        "symfony/webpack-encore-bundle": "^1.16",
-        "symfony/yaml": "6.2.*",
-        "selenesoftware/cms-bundle":"dev-profile",
+        "symfony/framework-bundle": "7.0.*",
+        "symfony/mailer": "7.0.*",
+        "symfony/runtime": "7.0.*",
+        "symfony/webpack-encore-bundle": "^2.1",
+        "symfony/yaml": "7.0.*",
+        "selenesoftware/cms-bundle":"dev-ver-0.0.12",
         "symfony/ux-twig-component": "^2.7"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.48",
-        "symfony/stopwatch": "6.2.*",
-        "symfony/web-profiler-bundle": "6.2.*"
+        "symfony/stopwatch": "7.0.*",
+        "symfony/web-profiler-bundle": "7.0.*"
     },
     "config": {
         "allow-plugins": {
@@ -68,7 +68,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.2.*"
+            "require": "7.0.*"
         }
     }
 }
