--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "@fortawesome/free-regular-svg-icons": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@hotwired/stimulus": "^3.2.1",
+        "@hotwired/turbo": "^7.0.1",
         "@symfony/stimulus-bridge": "^3.2.2",
+        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "@symfony/webpack-encore": "^4.2.0",
         "core-js": "^3.30.1",
         "prettier": "2.6.2",
