making a footer feature in the admin

--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=9200ef1ca701b77da7f797afda5896a9
+APP_ENV=prod
+APP_SECRET=ef15a68252a2b1f99303a6c16556b88d
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,7 +28,3 @@ APP_SECRET=9200ef1ca701b77da7f797afda5896a9
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
-
-###> symfony/mailer ###
-# MAILER_DSN=null://null
-###< symfony/mailer ###
