--- a/composer.json
+++ b/composer.json
@@ -4,24 +4,20 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "selenesoftware/cms-bundle": "dev-ver-0.0.12",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
-        "symfony/mailer": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/webpack-encore-bundle": "^2.1",
-        "symfony/yaml": "7.0.*",
-        "selenesoftware/cms-bundle":"dev-ver-0.0.12",
-        "symfony/ux-twig-component": "^2.7"
+        "symfony/yaml": "7.0.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.48",
-        "symfony/stopwatch": "7.0.*",
-        "symfony/web-profiler-bundle": "7.0.*"
+        "symfony/maker-bundle": "^1.54"
     },
     "config": {
         "allow-plugins": {
@@ -48,7 +44,8 @@
         "symfony/polyfill-php73": "*",
         "symfony/polyfill-php74": "*",
         "symfony/polyfill-php80": "*",
-        "symfony/polyfill-php81": "*"
+        "symfony/polyfill-php81": "*",
+        "symfony/polyfill-php82": "*"
     },
     "scripts": {
         "auto-scripts": {
