--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "devDependencies": {
-        "@babel/core": "^7.21.4",
-        "@babel/preset-env": "^7.21.4",
+        "@babel/core": "^7.17.0",
+        "@babel/preset-env": "^7.17.0",
+        "@babel/plugin-proposal-class-properties": "^7.17.0",
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@fortawesome/free-brands-svg-icons": "^6.4.0",
@@ -33,7 +34,6 @@
         "breakpoints-js": "^1.0.6",
         "file-loader": "^6.2.0",
         "jquery": "^3.6.4",
-        "node-sass": "^8.0.0",
         "sass-embedded": "^1.62.0",
         "sass-loader": "^13.2.2"
     }
