--- a/config/packages/twig_component.yaml
+++ b/config/packages/twig_component.yaml
@@ -2,4 +2,5 @@ twig_component:
     anonymous_template_directory: 'components/'
     defaults:
         # Namespace & directory for components
-        App\Twig\Components\: 'components/'
+        Selene\CMSBundle\Twig\Components\: 'vendor/selenesoftware/cms-bundle/templates/components/'
+        App\Twig\Components\: 'components'
