--- a/nginx/server.conf
+++ b/nginx/server.conf
@@ -17,7 +17,8 @@ server {
 
     location ~ ^/index\.php(/|$) {
         # when using PHP-FPM as a unix socket
-        fastcgi_pass unix:/var/run/php-fpm.sock;
+        # fastcgi_pass unix:/var/run/php-fpm.sock;
+        fastcgi_pass php:9000;  # Connect to the php-fpm container
 
         # when PHP-FPM is configured to use TCP
         # fastcgi_pass 127.0.0.1:9000;
