--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,8 @@
 worker_processes auto;
+# user nginx;
 
 events {
+    multi_accept on;
     worker_connections 1024;
 }
 
@@ -14,12 +16,10 @@ http {
     include /etc/nginx/server.conf;
 }
 
-# user www-data;
 # worker_processes auto;
 # worker_rlimit_nofile 65535;
 #
 # events {
-# 	multi_accept on;
 # 	worker_connections 65535;
 # }
 #
