plenty of fun things with the updates to the bundle and making the login work and the js for the drop down actually works

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
-        "selenesoftware/cms-bundle": "dev-v12-profile",
+        "selenesoftware/cms-bundle": "dev-v12-reset-password",
         "symfony/asset": "7.1.*",
         "symfony/asset-mapper": "7.1.*",
         "symfony/console": "7.1.*",
