fixing some image stuff

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 ###> symfony/asset-mapper ###
 /public/assets/
 /assets/vendor/
+/public/uploads/
 ###< symfony/asset-mapper ###
 
 .php-cs-fixer.cache
